src/assets/stylesheets/Sidebar.scss
@use "./rpf_design_system/spacing" as *;
@use "./rpf_design_system/font-size" as *;
@use "./rpf_design_system/colours" as *;

/* Sidebar */
.sidebar {
  display: flex;
  position: relative;
  scrollbar-width: none;
}

.sidebar--mobile {
  block-size: 100%;
  inline-size: 100%;
  overflow-y: hidden;

  .react-tabs .react-tabs__tab-list {
    flex: unset;
  }
}

.editor-logo {
  block-size: $space-2-5;
  inline-size: $space-2-5;
  padding: $space-0-75;
}

.sidebar__bar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 8px;
  background-color: var(--sidebar-background);
}

.sidebar__bar--selected {
  border-radius: 8px 0 0 8px;
  background-color: var(--sidebar-background-selected);
  border-inline-end: 1px solid var(--sidebar-border);
}

.sidebar__bar-options--top,
.sidebar__bar-options--bottom {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: $space-0-5;
}

.sidebar__bar-option-wrapper {
  padding: calc(0.75 * $space-0-5);
  border: 1px solid transparent;

  &--selected {
    background-color: var(--sidebar-panel-background);
    border-radius: $space-0-5 0 0 $space-0-5;
    border-block: 1px solid var(--sidebar-border);
    border-inline-start: 1px solid var(--sidebar-border);

    .sidebar__bar-option {
      border: 2px solid var(--sidebar-option-selected-border);
    }
  }
}

.sidebar__bar-option {
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  margin: 0;
  border: 2px solid transparent;

  svg {
    margin: 0;
  }

  &:hover {
    background-color: var(--sidebar-option-hover);
  }

  &--selected {
    background-color: var(--sidebar-option-selected-background);

    svg {
      fill: var(--sidebar-option-selected-icon);
    }
  }

  &--selected:hover {
    background-color: var(--sidebar-option-selected-background-hover);
  }
}

.sidebar__bar-close {
  border-block-start: 1px solid var(--sidebar-border);
}

.sidebar__panel {
  display: flex;
  flex-direction: column;
  padding: $space-1;
  padding-block-end: 0;
  position: relative;
  border-radius: 0 8px 8px 0;
  inline-size: inherit;
  background: var(--sidebar-panel-background);
}

.sidebar__panel--with-footer {
  padding-block-end: $space-2;
}

.sidebar__panel-heading {
  margin: 0;
  @include font-size-1-5(regular);
}

.sidebar__panel-header {
  display: flex;
  flex-direction: column;
  gap: $space-1;
  padding-block-end: $space-1;
  border-block-end: 1px solid var(--sidebar-border);
}

.sidebar__panel-content {
  flex: 1;
  padding: $space-1 0;
  overflow-y: auto;
  scrollbar-width: thin;
}

.sidebar__panel-footer {
  border-block-start: 1px solid $rpf-grey-150;
  inset-block-end: 0px;
  inline-size: 100%;
  inline-size: -moz-available;
  inline-size: -webkit-stretch;
  inline-size: stretch;
  background-color: white;
  border-end-end-radius: 8px;
}

